# dynamic-doc-sh

./: .gitignore  LICENSE  Makefile  README.md  RELEASING.md  Usage.md  generate-documentation.py  generate_documentation.py  hash_handling.py  previous_hash.txt  pyproject.toml  requirements.txt  setup.py  test-doc.md  test.sh  test.sh-doc.md
.github/workflows/: helper.yml
src/dynamic_doc_sh/: __init__.py  generate_documentation.py  hash_handling.py  previous_hash.txt  requirements.txt
src/dynamic_doc_sh/templates/: doc_template.md.j2
templates/: doc_template.md.j2
tests/: conftest.py  default.sh  default_previous_hash_path.txt  test_hash_handling.py  test_markdown_generation.py
